fix: adapt SVG height on IE 11 and fix some positions

--- a/scss/modules/_inspiration.scss
+++ b/scss/modules/_inspiration.scss
@@ -116,7 +116,7 @@
     }
 
     .m-inspiration--element-link {
-        top: 355px;
+        top: 383px;
         left: -303px;
     }
 
@@ -230,17 +230,17 @@
     }
 
     .m-inspiration--element-outline-link {
-        top: 680px;
+        top: 705px;
         left: -85px;
     }
 
     .m-inspiration--element-outline-color {
-        top: 821px;
+        top: 841px;
         left: -85px;
     }
 
     .m-inspiration--element-outline-text {
-        top: 757px;
+        top: 777px;
         left: 172px;
     }
 }
